Use RenderWidgetHostVisibilityTracker correctly

RenderWidgetHostVisibilityTracker should outlive
OnTabStripModelChanged().

Bug: 907237
Change-Id: I784140523076ba2472a04b98b0840f0bd75ba50d
Reviewed-on: https://chromium-review.googlesource.com/c/1345750
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Erik Chen <erikchen@chromium.org>
Commit-Queue: Sang Woo Ko <sangwoo108@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610888}
Former-commit-id: 06d779c4cbe9b07663f14915801a037497e40335